--- a/flask_web/templates/index.html
+++ b/flask_web/templates/index.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <h1>Hello, {{ user.profile.firstName }} {{ user.profile.lastName }}!</h1>
+    <h1>Hello, {{ user.firstName }} {{ user.lastName }}!</h1>
 {% endblock %}
