--- a/flask_web/templates/base.html
+++ b/flask_web/templates/base.html
@@ -21,6 +21,7 @@
 
   <!-- Custom styles for this template-->
   <link href="{{ url_for('static', filename='css/sb-admin-2.min.css') }}" rel="stylesheet">
+  <link href="{{ url_for('static', filename='vendor/datatables/dataTables.bootstrap4.min.css') }}" rel="stylesheet">
 
 </head>
 
@@ -52,6 +53,18 @@
 
       <!-- Divider -->
       <hr class="sidebar-divider">
+
+            <!-- Heading -->
+      <div class="sidebar-heading">
+        Students
+      </div>
+
+      <!-- Nav Item - Tables -->
+      <li class="nav-item">
+        <a class="nav-link" href="/student">
+          <i class="fas fa-fw fa-user-astronaut"></i>
+          <span>Manage Students</span></a>
+      </li>
 
       <!-- Heading -->
       <div class="sidebar-heading">
@@ -165,19 +178,31 @@
             <!-- Nav Item - User Information -->
             <li class="nav-item dropdown no-arrow">
               <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                <span class="mr-2 d-none d-lg-inline text-gray-600 small">Valerie Luna</span>
+                <span class="mr-2 d-none d-lg-inline text-gray-600 small">{{ user.firstName }} {{ user.lastName }}</span>
                 <img class="img-profile rounded-circle" src="https://source.unsplash.com/QAB-WJcbgJk/60x60">
               </a>
               <!-- Dropdown - User Information -->
               <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in" aria-labelledby="userDropdown">
-                <a class="dropdown-item" href="/profile">
+
+
+                        {% if current_user.is_anonymous %}
+                                <a class="dropdown-item" href="{{ url_for('main.login') }}">
+                  <i class="fas fa-sign-in-alt fa-sm fa-fw mr-2 text-gray-400"></i>
+                  Login
+                </a>
+                        {% else %}
+                                <a class="dropdown-item" href="/profile">
                   <i class="fas fa-user fa-sm fa-fw mr-2 text-gray-400"></i>
                   Profile
                 </a>
-<!--                <a class="dropdown-item" href="#">-->
-<!--                  <i class="fas fa-cogs fa-sm fa-fw mr-2 text-gray-400"></i>-->
-<!--                  Settings-->
-<!--                </a>-->
+
+                                <a class="dropdown-item" href="{{ url_for('main.logout') }}" data-toggle="modal" data-target="#logoutModal">
+                  <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i>
+                  Logout
+                </a>
+                        {% endif %}
+
+
 <!--                <a class="dropdown-item" href="#">-->
 <!--                  <i class="fas fa-list fa-sm fa-fw mr-2 text-gray-400"></i>-->
 <!--                  Activity Log-->
@@ -258,10 +283,13 @@
 
   <!-- Page level plugins -->
   <script src="{{ url_for('static', filename='vendor/chart.js/Chart.min.js') }}"></script>
+  <script src="{{ url_for('static', filename='vendor/datatables/jquery.dataTables.min.js') }}"></script>
+  <script src="{{ url_for('static', filename='vendor/datatables/dataTables.bootstrap4.min.js') }}"></script>
 
   <!-- Page level custom scripts -->
   <script src="{{ url_for('static', filename='js/demo/chart-area-demo.js') }}"></script>
   <script src="{{ url_for('static', filename='js/demo/chart-pie-demo.js') }}"></script>
+  <script src="{{ url_for('static', filename='js/demo/datatables-demo.js') }}"></script>
 
 </body>
 
