--- a/flask_web/templates/login.html
+++ b/flask_web/templates/login.html
@@ -3,9 +3,18 @@
 {% block content %}
                   <form class="user" action="" method="post" novalidate>
                     {{ form.hidden_tag() }}
+                      {% with messages = get_flashed_messages() %}
+        {% if messages %}
+        <ul>
+            {% for message in messages %}
+            <li>{{ message }}</li>
+            {% endfor %}
+        </ul>
+        {% endif %}
+        {% endwith %}
                     <div class="form-group">
-                        {{ form.username(class_='form-control form-control-user', type='email', id='exampleInputEmail', placeholder='Enter Email Address...') }}
-                               {% for error in form.username.errors %}
+                        {{ form.email(class_='form-control form-control-user', type='email', id='exampleInputEmail', placeholder='Enter Email Address...') }}
+                               {% for error in form.email.errors %}
             <span style="color: red;">[{{ error }}]</span>
                          {% endfor %}
                     </div>
