Change pictures to contain fewer pugs

--- a/flask_web/templates/login.html
+++ b/flask_web/templates/login.html
@@ -1,6 +1,18 @@
 {% extends "emptybase.html" %}
 
 {% block content %}
+     <div class="col-xl-10 col-lg-12 col-md-9">
+
+        <div class="card o-hidden border-0 shadow-lg my-5">
+          <div class="card-body p-0">
+<div class="row">
+              <div class="col-lg-6 d-none d-lg-block bg-login-image"></div>
+              <div class="col-lg-6">
+                <div class="p-5">
+                  <div class="text-center">
+                    <h1 class="h4 text-gray-900 mb-4">Welcome Back!</h1>
+                  </div>
+
                   <form class="user" action="" method="post" novalidate>
                     {{ form.hidden_tag() }}
                       {% with messages = get_flashed_messages() %}
@@ -29,4 +41,12 @@
                         <p>{{ form.submit() }}</p>
                     </div>
                   </form>
-{% endblock %}
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+      </div>
+
+                    {% endblock %}
