Student Teacher relationships

--- a/flask_web/templates/base.html
+++ b/flask_web/templates/base.html
@@ -61,7 +61,7 @@
 
       <!-- Nav Item - Tables -->
       <li class="nav-item">
-        <a class="nav-link" href="/student">
+        <a class="nav-link" href="/students">
           <i class="fas fa-fw fa-user-astronaut"></i>
           <span>Manage Students</span></a>
       </li>
