--- a/flask_web/templates/base.html
+++ b/flask_web/templates/base.html
@@ -54,9 +54,25 @@
       <!-- Divider -->
       <hr class="sidebar-divider">
 
+      <!-- Heading -->
+      <div class="sidebar-heading">
+        My Stuff
+      </div>
+
+      <li class="nav-item">
+        <a class="nav-link" href="/mystudents">
+          <i class="fas fa-fw fa-user-friends"></i>
+          <span>My Students</span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/classes">
+          <i class="fas fa-fw fa-chalkboard-teacher"></i>
+          <span>My Classes</span></a>
+      </li>
+
             <!-- Heading -->
       <div class="sidebar-heading">
-        Students
+        Admin
       </div>
 
       <!-- Nav Item - Tables -->
