--- a/flask_web/templates/edit_student.html
+++ b/flask_web/templates/edit_student.html
@@ -1,40 +1,64 @@
 {% extends "base.html" %}
 
 {% block content %}
-
-    <!-- Pie Chart -->
-    <div class="col-xl-4 col-lg-5">
-        <div class="card shadow mb-4">
-            <!-- Card Header - Dropdown -->
-            <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
-                <h6 class="m-0 font-weight-bold text-primary">Edit Student</h6>
-                                  <div class="dropdown no-arrow">
-                                    <a class="dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                      <i class="fas fa-ellipsis-v fa-sm fa-fw text-gray-400"></i>
-                                    </a>
-                                    <div class="dropdown-menu dropdown-menu-right shadow animated--fade-in" aria-labelledby="dropdownMenuLink">
-                                      <a class="dropdown-item" href="/student/{{ student.external_id }}/delete">Delete Student</a>
-                                    </div>
-                                  </div>
+<div class="col-xl-6 col-lg-8">
+    <div class="card shadow mb-4">
+        <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
+            <h6 class="m-0 font-weight-bold text-primary">Edit Student</h6>
+            <div class="dropdown no-arrow">
+                <a class="dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown"
+                   aria-haspopup="true" aria-expanded="false">
+                    <i class="fas fa-ellipsis-v fa-sm fa-fw text-gray-400"></i>
+                </a>
+                <div class="dropdown-menu dropdown-menu-right shadow animated--fade-in"
+                     aria-labelledby="dropdownMenuLink">
+                    <a class="dropdown-item" href="/students/{{ student.external_id }}/delete" data-toggle="modal" data-target="#deleteStudentModal">Delete Student</a>
+                </div>
             </div>
-            <!-- Card Body -->
-            <div class="card-body">
-                <form action="" method="post">
-                    {{ form.hidden_tag() }}
-                    <p>
-                        {{ form.first_name(class_="form-control form-control-user", type="text", placeholder='First Name') }}
-                        {% for error in form.first_name.errors %}
-                        <span style="color: red;">[{{ error }}]</span>
-                        {% endfor %}
-                        <br>
-                        {{ form.last_name(class_="form-control form-control-user", type="text", placeholder='Last Name') }}
-                        {% for error in form.last_name.errors %}
-                        <span style="color: red;">[{{ error }}]</span>
-                        {% endfor %}
-                    </p>
-                    <p>{{ form.submit(class_="btn btn-primary") }}</p>
-                </form>
+        </div>
+        <div class="card-body">
+            <form action="" method="post">
+                {{ form.hidden_tag() }}
+                <p>
+                    {{ form.first_name(class_="form-control form-control-user", type="text", placeholder='First Name')
+                    }}
+                    {% for error in form.first_name.errors %}
+                    <span style="color: red;">[{{ error }}]</span>
+                    {% endfor %}
+                    <br>
+                    {{ form.last_name(class_="form-control form-control-user", type="text", placeholder='Last Name') }}
+                    {% for error in form.last_name.errors %}
+                    <span style="color: red;">[{{ error }}]</span>
+                    {% endfor %}
+                </p>
+                <p>{{ form.submit(class_="btn btn-primary") }}</p>
+            </form>
+        </div>
+    </div>
+</div>
+
+<!-- Delete Student Modal-->
+<div class="modal fade" id="deleteStudentModal" tabindex="-1" role="dialog"
+     aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Delete {{ student.first_name }}
+                    {{ student.last_name }}</h5>
+                <button class="close" type="button" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">×</span>
+                </button>
+            </div>
+            <div class="modal-body">Select "Confirm" to remove this student from the system entirely. Currently,
+                removing this student DOES remove their contact history. Unless you are 100% sure that you should be
+                doing this, I would hit "Cancel".
+            </div>
+            <div class="modal-footer">
+                <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel
+                </button>
+                <a class="btn btn-primary" href="/students/{{ student.external_id }}/delete">Confirm</a>
             </div>
         </div>
     </div>
-    {% endblock %}
+</div>
+{% endblock %}
