--- a/flask_web/templates/login.html
+++ b/flask_web/templates/login.html
@@ -1,52 +1,51 @@
 {% extends "emptybase.html" %}
 
 {% block content %}
-     <div class="col-xl-10 col-lg-12 col-md-9">
+<div class="col-xl-10 col-lg-12 col-md-9">
+    <div class="card o-hidden border-0 shadow-lg my-5">
+        <div class="card-body p-0">
+            <div class="row">
+                <div class="col-lg-6 d-none d-lg-block bg-login-image"></div>
+                <div class="col-lg-6">
+                    <div class="p-5">
+                        <div class="text-center">
+                            <h1 class="h4 text-gray-900 mb-4">Welcome Back!</h1>
+                        </div>
 
-        <div class="card o-hidden border-0 shadow-lg my-5">
-          <div class="card-body p-0">
-<div class="row">
-              <div class="col-lg-6 d-none d-lg-block bg-login-image"></div>
-              <div class="col-lg-6">
-                <div class="p-5">
-                  <div class="text-center">
-                    <h1 class="h4 text-gray-900 mb-4">Welcome Back!</h1>
-                  </div>
-
-                  <form class="user" action="" method="post" novalidate>
-                    {{ form.hidden_tag() }}
-                      {% with messages = get_flashed_messages() %}
-        {% if messages %}
-        <ul>
-            {% for message in messages %}
-            <li>{{ message }}</li>
-            {% endfor %}
-        </ul>
-        {% endif %}
-        {% endwith %}
-                    <div class="form-group">
-                        {{ form.email(class_='form-control form-control-user', type='email', id='exampleInputEmail', placeholder='Enter Email Address...') }}
-                               {% for error in form.email.errors %}
-            <span style="color: red;">[{{ error }}]</span>
-                         {% endfor %}
-                    </div>
-                    <div class="form-group">
-                        {{ form.password(class_="form-control form-control-user", id="exampleInputPassword", placeholder="Password") }}
+                        <form class="user" action="" method="post" novalidate>
+                            {{ form.hidden_tag() }}
+                            {% with messages = get_flashed_messages() %}
+                            {% if messages %}
+                            <ul>
+                                {% for message in messages %}
+                                <li>{{ message }}</li>
+                                {% endfor %}
+                            </ul>
+                            {% endif %}
+                            {% endwith %}
+                            <div class="form-group">
+                                {{ form.email(class_='form-control form-control-user', type='email',
+                                id='exampleInputEmail', placeholder='Enter Email Address...') }}
+                                {% for error in form.email.errors %}
+                                <span style="color: red;">[{{ error }}]</span>
+                                {% endfor %}
+                            </div>
+                            <div class="form-group">
+                                {{ form.password(class_="form-control form-control-user", id="exampleInputPassword",
+                                placeholder="Password") }}
                                 {% for error in form.password.errors %}
-            <span style="color: red;">[{{ error }}]</span>
-                         {% endfor %}
+                                <span style="color: red;">[{{ error }}]</span>
+                                {% endfor %}
+                            </div>
+                            <div class="form-group">
+                                <p>{{ form.remember_me() }} {{ form.remember_me.label }}</p>
+                                <p>{{ form.submit() }}</p>
+                            </div>
+                        </form>
                     </div>
-                    <div class="form-group">
-                        <p>{{ form.remember_me() }} {{ form.remember_me.label }}</p>
-                        <p>{{ form.submit() }}</p>
-                    </div>
-                  </form>
                 </div>
-              </div>
             </div>
-          </div>
         </div>
-
-      </div>
-
-                    {% endblock %}
+    </div>
+</div>
+{% endblock %}
