--- a/flask_web/templates/students.html
+++ b/flask_web/templates/students.html
@@ -1,71 +1,12 @@
 {% extends "base.html" %}
 
 {% block content %}
-
 <div class="row">
-
-    <!-- Area Chart -->
-    <div class="col-xl-8 col-lg-7">
+ <div class="col-xl-6 col-lg-8">
         <div class="card shadow mb-4">
-            <div class="card-header py-3">
-                <h6 class="m-0 font-weight-bold text-primary">All Students</h6>
-            </div>
-            <div class="card-body">
-                <div class="table-responsive">
-                    <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
-                        <thead>
-                        <tr>
-                            <th>ID</th>
-                            <th>First Name</th>
-                            <th>Last Name</th>
-                            <th></th>
-                        </tr>
-                        </thead>
-                        <tfoot>
-                        <tr>
-                            <th>ID</th>
-                            <th>First Name</th>
-                            <th>Last Name</th>
-                            <th></th>
-                        </tr>
-                        </tfoot>
-                        <tbody>
-                        {% for student in students %}
-                        <tr>
-                            <td>{{ student.external_id }}</td>
-                            <td>{{ student.first_name }}</td>
-                            <td>{{ student.last_name }}</td>
-                            <td><a href="/student/{{ student.external_id }}/edit" class="btn btn-primary btn-block">Edit</a></td>
-                        </tr>
-                        </tr>
-                        {% endfor %}
-                        </tbody>
-                    </table>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <!-- Pie Chart -->
-    <div class="col-xl-4 col-lg-5">
-        <div class="card shadow mb-4">
-            <!-- Card Header - Dropdown -->
             <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
                 <h6 class="m-0 font-weight-bold text-primary">Add New Student</h6>
-                <!--                  <div class="dropdown no-arrow">-->
-                <!--                    <a class="dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">-->
-                <!--                      <i class="fas fa-ellipsis-v fa-sm fa-fw text-gray-400"></i>-->
-                <!--                    </a>-->
-                <!--                    <div class="dropdown-menu dropdown-menu-right shadow animated&#45;&#45;fade-in" aria-labelledby="dropdownMenuLink">-->
-                <!--                      <div class="dropdown-header">Dropdown Header:</div>-->
-                <!--                      <a class="dropdown-item" href="#">Action</a>-->
-                <!--                      <a class="dropdown-item" href="#">Another action</a>-->
-                <!--                      <div class="dropdown-divider"></div>-->
-                <!--                      <a class="dropdown-item" href="#">Something else here</a>-->
-                <!--                    </div>-->
-                <!--                  </div>-->
             </div>
-            <!-- Card Body -->
             <div class="card-body">
                 <form action="" method="post">
                     {{ form.hidden_tag() }}
@@ -88,9 +29,43 @@
 </div>
 
 <div class="row">
-    <!-- DataTales Example -->
-
-
+    <div class="col-xl-6 col-lg-8">
+        <div class="card shadow mb-4">
+            <div class="card-header py-3">
+                <h6 class="m-0 font-weight-bold text-primary">All Students</h6>
+            </div>
+            <div class="card-body">
+                <div class="table-responsive">
+                    <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
+                        <thead>
+                        <tr>
+                            <th>First Name</th>
+                            <th>Last Name</th>
+                            <th></th>
+                        </tr>
+                        </thead>
+                        <tfoot>
+                        <tr>
+                            <th>First Name</th>
+                            <th>Last Name</th>
+                            <th></th>
+                        </tr>
+                        </tfoot>
+                        <tbody>
+                        {% for student in students %}
+                        <tr>
+                            <td>{{ student.first_name }}</td>
+                            <td>{{ student.last_name }}</td>
+                            <td><a href="/students/{{ student.external_id }}/edit"
+                                   class="btn btn-primary btn-block">Edit</a></td>
+                        </tr>
+                        </tr>
+                        {% endfor %}
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
-
 {% endblock %}
