Contact Types and Services Offered

--- a/flask_web/templates/base.html
+++ b/flask_web/templates/base.html
@@ -75,12 +75,24 @@
         Admin
       </div>
 
-      <!-- Nav Item - Tables -->
       <li class="nav-item">
         <a class="nav-link" href="/students">
           <i class="fas fa-fw fa-user-astronaut"></i>
           <span>Manage Students</span></a>
       </li>
+
+      <li class="nav-item">
+        <a class="nav-link" href="/contact_types">
+          <i class="fas fa-fw fa-file-contract"></i>
+          <span>Manage Contact Types</span></a>
+      </li>
+
+      <li class="nav-item">
+        <a class="nav-link" href="/services_offered">
+          <i class="fas fa-fw fa-hands-helping"></i>
+          <span>Manage Services</span></a>
+      </li>
+
 
       <!-- Heading -->
       <div class="sidebar-heading">
