--- a/flask_web/templates/index.html
+++ b/flask_web/templates/index.html
@@ -1,5 +1,56 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <h1>Hello, {{ user.firstName }} {{ user.lastName }}!</h1>
+
+
+<div class="row">
+    <div class="col-xl-6 col-lg-8">
+        <div class="card shadow mb-4">
+            <div class="card-header py-3">
+                <h6 class="m-0 font-weight-bold text-primary">My Students</h6>
+            </div>
+            <div class="card-body">
+                <div class="table-responsive">
+                    <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
+                        <thead>
+                        <tr>
+                            <th>Last Name</th>
+                            <th>First Name</th>
+                            <th>Classes</th>
+                            <th></th>
+                        </tr>
+                        </thead>
+                        <tfoot>
+                        <tr>
+                            <th>Last Name</th>
+                            <th>First Name</th>
+                            <th>Classes</th>
+                            <th></th>
+                        </tr>
+                        </tfoot>
+                        <tbody>
+                        {% for student in students %}
+                        <tr>
+                            <td>{{ student.last_name }}</td>
+                            <td>{{ student.first_name }}</td>
+                            <td>{% for classroom in student.classrooms %}
+                                    {{ classroom.name }}
+                                    {% if not loop.last %}
+                                    |
+                                    {% endif %}
+                                {% endfor %}
+                            </td>
+                            <td><a class="btn btn-primary" href="/mystudents/{{ student.external_id }}/contact">Contact</a></td>
+                        </tr>
+                        </tr>
+                        {% endfor %}
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+
 {% endblock %}
