Create contacts for student, classroom, and display.  Plus a whole ton of reorg

--- a/flask_web/templates/base.html
+++ b/flask_web/templates/base.html
@@ -45,20 +45,11 @@
       <hr class="sidebar-divider my-0">
 
       <!-- Nav Item - Dashboard -->
-      <li class="nav-item active">
+      <li class="nav-item">
         <a class="nav-link" href="/index">
           <i class="fas fa-fw fa-tachometer-alt"></i>
-          <span>Dashboard</span></a>
+          <span>Contact History</span></a>
       </li>
-
-      <!-- Divider -->
-      <hr class="sidebar-divider">
-
-      <!-- Heading -->
-      <div class="sidebar-heading">
-        My Stuff
-      </div>
-
       <li class="nav-item">
         <a class="nav-link" href="/mystudents">
           <i class="fas fa-fw fa-user-friends"></i>
@@ -70,7 +61,10 @@
           <span>My Classes</span></a>
       </li>
 
-            <!-- Heading -->
+      <!-- Divider -->
+      <hr class="sidebar-divider">
+
+      <!-- Heading -->
       <div class="sidebar-heading">
         Admin
       </div>
@@ -92,90 +86,7 @@
           <i class="fas fa-fw fa-hands-helping"></i>
           <span>Manage Services</span></a>
       </li>
-
-
-      <!-- Heading -->
-      <div class="sidebar-heading">
-        Section 1
-      </div>
-
-      <!-- Nav Item - Pages Collapse Menu -->
-      <li class="nav-item">
-        <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="true" aria-controls="collapseTwo">
-          <i class="fas fa-fw fa-cog"></i>
-          <span>Example 1</span>
-        </a>
-        <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
-          <div class="bg-white py-2 collapse-inner rounded">
-            <h6 class="collapse-header">Example 1 Header:</h6>
-            <a class="collapse-item" href="#">Option 1</a>
-            <a class="collapse-item" href="#">Option 2</a>
-          </div>
-        </div>
-      </li>
-
-      <!-- Nav Item - Utilities Collapse Menu -->
-      <li class="nav-item">
-        <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseUtilities" aria-expanded="true" aria-controls="collapseUtilities">
-          <i class="fas fa-fw fa-wrench"></i>
-          <span>Example 2</span>
-        </a>
-        <div id="collapseUtilities" class="collapse" aria-labelledby="headingUtilities" data-parent="#accordionSidebar">
-          <div class="bg-white py-2 collapse-inner rounded">
-            <h6 class="collapse-header">Example 2 Header:</h6>
-            <a class="collapse-item" href="#">Option 1</a>
-            <a class="collapse-item" href="#">Option 2</a>
-            <a class="collapse-item" href="#">Option 3</a>
-            <a class="collapse-item" href="#">Option 4</a>
-          </div>
-        </div>
-      </li>
-
-      <!-- Divider -->
-      <hr class="sidebar-divider">
-
-      <!-- Heading -->
-      <div class="sidebar-heading">
-        Section 2
-      </div>
-
-      <!-- Nav Item - Pages Collapse Menu -->
-      <li class="nav-item">
-        <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapsePages" aria-expanded="true" aria-controls="collapsePages">
-          <i class="fas fa-fw fa-folder"></i>
-          <span>Example 3</span>
-        </a>
-        <div id="collapsePages" class="collapse" aria-labelledby="headingPages" data-parent="#accordionSidebar">
-          <div class="bg-white py-2 collapse-inner rounded">
-            <h6 class="collapse-header">Example 3 Header 1:</h6>
-            <a class="collapse-item" href="#">Option 1</a>
-            <a class="collapse-item" href="#">Option 2</a>
-            <a class="collapse-item" href="#">Option 3</a>
-            <div class="collapse-divider"></div>
-            <h6 class="collapse-header">Example 3 Header 2:</h6>
-            <a class="collapse-item" href="#">Option 1</a>
-            <a class="collapse-item" href="#">Option 2</a>
-          </div>
-        </div>
-      </li>
-
-      <!-- Nav Item - Charts -->
-      <li class="nav-item">
-        <a class="nav-link" href="#">
-          <i class="fas fa-fw fa-chart-area"></i>
-          <span>Example 4</span></a>
-      </li>
-
-      <!-- Nav Item - Tables -->
-      <li class="nav-item">
-        <a class="nav-link" href="#">
-          <i class="fas fa-fw fa-table"></i>
-          <span>Example 5</span></a>
-      </li>
-
-      <!-- Divider -->
-      <hr class="sidebar-divider d-none d-md-block">
-
+      <br>
       <!-- Sidebar Toggler (Sidebar) -->
       <div class="text-center d-none d-md-inline">
         <button class="rounded-circle border-0" id="sidebarToggle"></button>
