--- a/flask_web/templates/index.html
+++ b/flask_web/templates/index.html
@@ -1,47 +1,47 @@
 {% extends "base.html" %}
 
 {% block content %}
-
-
 <div class="row">
-    <div class="col-xl-6 col-lg-8">
+    <div class="col-xl-12 col-lg-12">
         <div class="card shadow mb-4">
             <div class="card-header py-3">
-                <h6 class="m-0 font-weight-bold text-primary">My Students</h6>
+                <h6 class="m-0 font-weight-bold text-primary">My Contact History</h6>
             </div>
             <div class="card-body">
                 <div class="table-responsive">
                     <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
                         <thead>
                         <tr>
-                            <th>Last Name</th>
-                            <th>First Name</th>
-                            <th>Classes</th>
-                            <th></th>
+                            <th>Contact Date</th>
+                            <th>Contact Start Time</th>
+                            <th>Contact End Time</th>
+                            <th>Student Name</th>
+                            <th>Contact Type</th>
+                            <th>Service Offered</th>
+                            <th>Notes</th>
                         </tr>
                         </thead>
                         <tfoot>
                         <tr>
-                            <th>Last Name</th>
-                            <th>First Name</th>
-                            <th>Classes</th>
-                            <th></th>
+                            <th>Contact Date</th>
+                            <th>Contact Start Time</th>
+                            <th>Contact End Time</th>
+                            <th>Student Name</th>
+                            <th>Contact Type</th>
+                            <th>Service Offered</th>
+                            <th>Notes</th>
                         </tr>
                         </tfoot>
                         <tbody>
-                        {% for student in students %}
+                        {% for contact in contacts %}
                         <tr>
-                            <td>{{ student.last_name }}</td>
-                            <td>{{ student.first_name }}</td>
-                            <td>{% for classroom in student.classrooms %}
-                                    {{ classroom.name }}
-                                    {% if not loop.last %}
-                                    |
-                                    {% endif %}
-                                {% endfor %}
-                            </td>
-                            <td><a class="btn btn-primary" href="/mystudents/{{ student.external_id }}/contact">Contact</a></td>
-                        </tr>
+                            <td>{{ contact.contact_date }}</td>
+                            <td>{{ contact.contact_start_time }}</td>
+                            <td>{{ contact.contact_end_time }}</td>
+                            <td>{{ contact.student.last_name }}, {{ contact.student.first_name }}</td>
+                            <td>{{ contact.contact_type}}</td>
+                            <td>{{ contact.service_offered }}</td>
+                            <td>{{ contact.notes }}</td>
                         </tr>
                         {% endfor %}
                         </tbody>
@@ -51,6 +51,5 @@
         </div>
     </div>
 </div>
-
 
 {% endblock %}
