--- a/flask_web/templates/manage_classroom.html
+++ b/flask_web/templates/manage_classroom.html
@@ -12,7 +12,7 @@
                 <form action="" method="post">
                     {{ form.hidden_tag() }}
                     <p>
-                    <div>{{ form.students(class_="form-control form-control-user") }}</div>
+                    {{ form.students(class_="form-control form-control-user") }}
                     </p>
                     <p>{{ form.submit(class_="btn btn-primary") }}</p>
                 </form>
@@ -48,8 +48,8 @@
                         <tr>
                             <td>{{ student.first_name }}</td>
                             <td>{{ student.last_name }}</td>
-                            <td><a href="/classes/{{ classroom.external_id }}/students/{{ student.external_id }}/remove" class="btn btn-primary btn-block"
-                                   data-toggle="modal" data-target="#remove{{ student.external_id }}Modal">Remove</a>
+                            <td><a href="/classes/{{ classroom.external_id }}/students/{{ student.external_id }}/remove" class="btn btn-danger btn-block"
+                                   data-toggle="modal" data-target="#remove{{ student.external_id }}Modal" role="button">Remove</a>
                             </td>
                         </tr>
 
