--- a/flask_web/templates/students.html
+++ b/flask_web/templates/students.html
@@ -57,7 +57,7 @@
                             <td>{{ student.first_name }}</td>
                             <td>{{ student.last_name }}</td>
                             <td><a href="/students/{{ student.external_id }}/edit"
-                                   class="btn btn-primary btn-block">Edit</a></td>
+                                   class="btn btn-primary" role="button">Edit</a></td>
                         </tr>
                         </tr>
                         {% endfor %}
