--- a/flask_web/templates/contact_student.html
+++ b/flask_web/templates/contact_student.html
@@ -1,56 +1,62 @@
 {% extends "base.html" %}
 
 {% block content %}
-<div class="col-xl-6 col-lg-8">
-    <div class="card shadow mb-4">
-        <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
-            <h6 class="m-0 font-weight-bold text-primary">Log Contact for {{ student.first_name }} {{ student.last_name
-                }}</h6>
-            <div class="dropdown no-arrow">
-                <a class="dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown"
-                   aria-haspopup="true" aria-expanded="false">
-                    <i class="fas fa-ellipsis-v fa-sm fa-fw text-gray-400"></i>
-                </a>
+<div class="row">
+    <div class="col-10">
+        <div class="card shadow mb-4">
+            <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
+                <h6 class="m-0 font-weight-bold text-primary">Log Contact for {{ student.first_name }} {{
+                    student.last_name
+                    }}</h6>
             </div>
-        </div>
-        <div class="card-body">
-            <form action="" method="post">
-                {{ form.hidden_tag() }}
-                <div class="form-row">
-                    <div class="form-group col-md-3">
-                        {{ form.contact_date.label }}
-                        {{ form.contact_date(class_="form-control", type="date", placeholder='Contact Date') }}
+            <div class="card-body">
+                <form action="" method="post">
+                    {{ form.hidden_tag() }}
+                    <div class="form-row">
+                        <div class="form-group col-10">
+                            {{ form.classroom_list.label }}
+                            {{ form.classroom_list(class_="form-control", placeholder='Classes', autofocus=true) }}
+                        </div>
                     </div>
-                    <div class="form-group col-md-3">
-                        {{ form.contact_start_time.label }}
-                        {{ form.contact_start_time(class_="form-control form-control-user", type="time",
-                        placeholder='Contact Start Time') }}
+                    <!-- Divider -->
+                    <hr class="divider">
+                    <div class="form-row">
+                        <div class="form-group col-3">
+                            {{ form.contact_date.label }}
+                            {{ form.contact_date(class_="form-control", type="date", placeholder='Contact Date') }}
+                        </div>
+                        <div class="form-group col-3">
+                            {{ form.contact_start_time.label }}
+                            {{ form.contact_start_time(class_="form-control form-control-user", type="time",
+                            placeholder='Contact Start Time') }}
 
+                        </div>
+                        <div class="form-group col-3">
+                            {{ form.contact_end_time.label }}
+                            {{ form.contact_end_time(class_="form-control form-control-user", type="time",
+                            placeholder='Contact End Time') }}
+                        </div>
                     </div>
-                    <div class="form-group col-md-3">
-                        {{ form.contact_end_time.label }}
-                        {{ form.contact_end_time(class_="form-control form-control-user", type="time",
-                        placeholder='Contact End Time') }}
+                    <div class="form-row">
+                        <div class="form-group col-5">
+                            {{ form.contact_types.label }}
+                            {{ form.contact_types(class_="form-control form-control-user") }}
+                        </div>
+                        <div class="form-group col-5">
+                            {{ form.services_offered.label }}
+                            {{ form.services_offered(class_="form-control form-control-user") }}
+                        </div>
                     </div>
-                </div>
-                <div class="form-row">
-                    <div class="form-group col-md-5">
-                        {{ form.contact_types.label }}
-                        {{ form.contact_types(class_="form-control form-control-user") }}
+                    <div class="form-row">
+                        <div class="form-group col-10">
+                            {{ form.notes.label }}
+                            {{ form.notes(rows=4, class_="form-control form-control-user", type="textArea",
+                            placeholder='Please enter additional notes') }}
+                        </div>
                     </div>
-                    <div class="form-group col-md-5">
-                        {{ form.services_offered.label }}
-                        {{ form.services_offered(class_="form-control form-control-user") }}
-                    </div>
-                </div>
-                <div class="form-row">
-                    <div class="form-group col-md-10">
-                        {{ form.notes.label }}
-                        {{ form.notes(rows=4, class_="form-control form-control-user", type="textArea", placeholder='Please enter additional notes') }}
-                    </div>
-                </div>
-                <p>{{ form.submit(class_="btn btn-primary") }}</p>
-            </form>
+                    <p>{{ form.submit(class_="btn btn-primary") }}</p>
+                </form>
+            </div>
         </div>
     </div>
 </div>
