--- a/flask_web/templates/edit_student.html
+++ b/flask_web/templates/edit_student.html
@@ -1,42 +1,40 @@
 {% extends "base.html" %}
 
 {% block content %}
-<div class="col-xl-6 col-lg-8">
-    <div class="card shadow mb-4">
-        <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
-            <h6 class="m-0 font-weight-bold text-primary">Edit Student</h6>
-            <div class="dropdown no-arrow">
-                <a class="dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown"
-                   aria-haspopup="true" aria-expanded="false">
-                    <i class="fas fa-ellipsis-v fa-sm fa-fw text-gray-400"></i>
-                </a>
-                <div class="dropdown-menu dropdown-menu-right shadow animated--fade-in"
-                     aria-labelledby="dropdownMenuLink">
-                    <a class="dropdown-item" href="/students/{{ student.external_id }}/delete" data-toggle="modal" data-target="#deleteStudentModal">Delete Student</a>
+<div class="row">
+    <div class="col-10">
+        <div class="card shadow mb-4">
+            <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
+                <h6 class="m-0 font-weight-bold text-primary">Edit Student</h6>
+                <div class="dropdown no-arrow">
+                    <a class="dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown"
+                       aria-haspopup="true" aria-expanded="false">
+                        <i class="fas fa-ellipsis-v fa-sm fa-fw text-gray-400"></i>
+                    </a>
+                    <div class="dropdown-menu dropdown-menu-right shadow animated--fade-in"
+                         aria-labelledby="dropdownMenuLink">
+                        <a class="dropdown-item" href="/students/{{ student.external_id }}/delete" data-toggle="modal"
+                           data-target="#deleteStudentModal">Delete Student</a>
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="card-body">
-            <form action="" method="post">
-                {{ form.hidden_tag() }}
-                <p>
-                    {{ form.first_name(class_="form-control form-control-user", type="text", placeholder='First Name')
-                    }}
-                    {% for error in form.first_name.errors %}
-                    <span style="color: red;">[{{ error }}]</span>
-                    {% endfor %}
-                    <br>
-                    {{ form.last_name(class_="form-control form-control-user", type="text", placeholder='Last Name') }}
-                    {% for error in form.last_name.errors %}
-                    <span style="color: red;">[{{ error }}]</span>
-                    {% endfor %}
-                </p>
-                <p>{{ form.submit(class_="btn btn-primary") }}</p>
-            </form>
+            <div class="card-body">
+                <form action="" method="post">
+                    {{ form.hidden_tag() }}
+                    <div class="row">
+                        <div class="col-4">{{ form.first_name(class_="form-control form-control-user", type="text",
+                            placeholder='First Name', autofocus=true) }}
+                        </div>
+                        <div class="col-4">{{ form.last_name(class_="form-control form-control-user", type="text",
+                            placeholder='Last Name') }}
+                        </div>
+                        <div class="col-2">{{ form.submit(class_="btn btn-primary") }}</div>
+                    </div>
+                </form>
+            </div>
         </div>
     </div>
 </div>
-
 <!-- Delete Student Modal-->
 <div class="modal fade" id="deleteStudentModal" tabindex="-1" role="dialog"
      aria-labelledby="exampleModalLabel" aria-hidden="true">
