--- a/flask_web/templates/manage_classroom.html
+++ b/flask_web/templates/manage_classroom.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <div class="row">
-    <div class="col-xl-6 col-lg-8">
+    <div class="col-10">
         <div class="card shadow mb-4">
             <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
                 <h6 class="m-0 font-weight-bold text-primary">Add Student To Class</h6>
@@ -11,17 +11,19 @@
             <div class="card-body">
                 <form action="" method="post">
                     {{ form.hidden_tag() }}
-                    <p>
-                    {{ form.students(class_="form-control form-control-user") }}
-                    </p>
-                    <p>{{ form.submit(class_="btn btn-primary") }}</p>
+                    <div class="row">
+                        <div class="col-4">
+                            {{ form.students(class_="form-control form-control-user", autofocus=true) }}
+                        </div>
+                        <div class="col-2">{{ form.submit(class_="btn btn-primary") }}</div>
+                    </div>
                 </form>
             </div>
         </div>
     </div>
 </div>
 <div class="row">
-    <div class="col-xl-6 col-lg-8">
+    <div class="col-10">
         <div class="card shadow mb-4">
             <div class="card-header py-3">
                 <h6 class="m-0 font-weight-bold text-primary">Students in {{ classroom.name }}</h6>
@@ -31,25 +33,27 @@
                     <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
                         <thead>
                         <tr>
-                            <th>First Name</th>
                             <th>Last Name</th>
+                            <th>First Name</th>
                             <th></th>
                         </tr>
                         </thead>
                         <tfoot>
                         <tr>
-                            <th>First Name</th>
                             <th>Last Name</th>
+                            <th>First Name</th>
                             <th></th>
                         </tr>
                         </tfoot>
                         <tbody>
                         {% for student in students %}
                         <tr>
-                            <td>{{ student.first_name }}</td>
                             <td>{{ student.last_name }}</td>
-                            <td><a href="/classes/{{ classroom.external_id }}/students/{{ student.external_id }}/remove" class="btn btn-danger btn-block"
-                                   data-toggle="modal" data-target="#remove{{ student.external_id }}Modal" role="button">Remove</a>
+                            <td>{{ student.first_name }}</td>
+                            <td><a href="/classes/{{ classroom.external_id }}/students/{{ student.external_id }}/remove"
+                                   class="btn btn-danger btn-sm"
+                                   data-toggle="modal" data-target="#remove{{ student.external_id }}Modal"
+                                   role="button">Remove</a>
                             </td>
                         </tr>
 
@@ -65,12 +69,14 @@
                                             <span aria-hidden="true">×</span>
                                         </button>
                                     </div>
-                                    <div class="modal-body">Select "Confirm" to remove this student from this class. Removing this student does not remove their contact history.
+                                    <div class="modal-body">Select "Confirm" to remove this student from this class.
+                                        Removing this student does not remove their contact history.
                                     </div>
                                     <div class="modal-footer">
                                         <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel
                                         </button>
-                                        <a class="btn btn-primary" href="/classes/{{ classroom.external_id }}/students/{{ student.external_id }}/remove">Confirm</a>
+                                        <a class="btn btn-primary"
+                                           href="/classes/{{ classroom.external_id }}/students/{{ student.external_id }}/remove">Confirm</a>
                                     </div>
                                 </div>
                             </div>
