--- a/flask_web/templates/students.html
+++ b/flask_web/templates/students.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <div class="row">
- <div class="col-xl-6 col-lg-8">
+    <div class="col-10">
         <div class="card shadow mb-4">
             <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
                 <h6 class="m-0 font-weight-bold text-primary">Add New Student</h6>
@@ -10,18 +10,15 @@
             <div class="card-body">
                 <form action="" method="post">
                     {{ form.hidden_tag() }}
-                    <p>
-                        {{ form.first_name(class_="form-control form-control-user", type="text", placeholder='First Name') }}
-                        {% for error in form.first_name.errors %}
-                        <span style="color: red;">[{{ error }}]</span>
-                        {% endfor %}
-                        <br>
-                        {{ form.last_name(class_="form-control form-control-user", type="text", placeholder='Last Name') }}
-                        {% for error in form.last_name.errors %}
-                        <span style="color: red;">[{{ error }}]</span>
-                        {% endfor %}
-                    </p>
-                    <p>{{ form.submit(class_="btn btn-primary") }}</p>
+                    <div class="row">
+                        <div class="col-4">{{ form.first_name(class_="form-control form-control-user", type="text",
+                            placeholder='First Name', autofocus=true) }}
+                        </div>
+                        <div class="col-4">{{ form.last_name(class_="form-control form-control-user", type="text",
+                            placeholder='Last Name') }}
+                        </div>
+                        <div class="col-2">{{ form.submit(class_="btn btn-primary") }}</div>
+                    </div>
                 </form>
             </div>
         </div>
@@ -29,7 +26,7 @@
 </div>
 
 <div class="row">
-    <div class="col-xl-6 col-lg-8">
+    <div class="col-10">
         <div class="card shadow mb-4">
             <div class="card-header py-3">
                 <h6 class="m-0 font-weight-bold text-primary">All Students</h6>
@@ -57,7 +54,7 @@
                             <td>{{ student.last_name }}</td>
                             <td>{{ student.first_name }}</td>
                             <td><a href="/students/{{ student.external_id }}/edit"
-                                   class="btn btn-primary" role="button">Edit</a></td>
+                                   class="btn btn-primary btn-sm" role="button">Edit</a></td>
                         </tr>
                         </tr>
                         {% endfor %}
